# trapezoidalfuzzynumber

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: demo.yml
src/: __init__.py
src/ambiguity/: __init__.py  ambiguity_measure_base.py  trapezoidal_ambiguity_measure.py
src/ambiguity/dependent_trapezoidal_ambiguity_measure/: __init__.py  dependent_trapezoidal_ambiguity_measure.py
src/ambiguity/independent_trapezoidal_ambiguity_measure/: __init__.py  independent_trapezoidal_ambiguity_measure.py
src/fuzzy_numbers/: __init__.py  fuzzy_number_base.py
src/fuzzy_numbers/algebra_fuzzy_number/: __init__.py  algebra_fuzzy_number_base.py
src/fuzzy_numbers/trapezoidal_fuzzy_number/: __init__.py  trapezoidal_fuzzy_number.py
test/: test_dependent_trapezoidal_ambiguity_measure.py  test_independent_trapezoidal_ambiguity_measure.py  test_trapezoidal_fuzzy_number.py
