[metadata]
name = trapezoidalfuzzynumber
version = 0.0.0
author = zakrzewskij
description = A package implementing two-sample permutation tests to verify equality of ambiguities in fuzzy data, additionally providing all necessary arithmetic operations performed on trapezoidal fuzzy numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zakrzewskij/trapezoidalfuzzynumber
download_url = https://test.pypi.org/project/trapezoidalfuzzynumber
keywords = trapezoidal_fuzzy_number, fuzzy_number, ambiguity, fuzzy_arithmetic, permutation_tests, fuzzy_data
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 5 - Production/Stable

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    numpy>=1.26.0
[options.packages.find]
where = src

